force-app/main/default/objects/MigrationRowError__c/MigrationRowError__c.object-meta.xml
<CustomObject>
    <description>Row-level error record. Covers pre-validation failures (Phase=PreValidation) and DML partial failures (Phase=DML). Source of the field-by-field, row-by-row error report.</description>
    <label>Migration Row Error</label>
    <nameField>
        <displayFormat>ERR-{000000}</displayFormat>
        <label>Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Row Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>