force-app/main/default/objects/MigrationRowError__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Full Salesforce error string or framework-generated validation message. For DML errors this is Database.Error.getMessage(). For pre-validation errors this is the framework message.</description>
    <label>Error Message</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>