force-app/main/default/objects/MigrationRowError__c/fields/FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>FieldApiName__c</fullName>
    <description>The specific Salesforce field that caused the error. Null for row-level DML errors that are not attributable to a single field.</description>
    <label>Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>