force-app/main/default/objects/MigrationRowError__c/fields/IsResolved__c.field-meta.xml
<CustomField>
    <fullName>IsResolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Client marks this true after fixing the source data. Used to filter the error report on re-run — only unresolved errors are shown in the pre-flight report.</description>
    <label>Is Resolved</label>
    <type>Checkbox</type>
</CustomField>