force-app/main/default/objects/MigrationRowError__c/fields/MigrationBatch__c.field-meta.xml
<CustomField>
    <fullName>MigrationBatch__c</fullName>
    <label>Migration Batch</label>
    <referenceTo>MigrationBatch__c</referenceTo>
    <relationshipLabel>Migration Row Errors</relationshipLabel>
    <relationshipName>MigrationRowErrors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>