force-app/main/default/objects/MigrationRowError__c/fields/MigrationJob__c.field-meta.xml
<CustomField>
    <fullName>MigrationJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denormalized reference to the parent job. Enables job-wide error report queries without traversing the batch relationship.</description>
    <label>Migration Job</label>
    <referenceTo>MigrationJob__c</referenceTo>
    <relationshipLabel>Migration Row Errors</relationshipLabel>
    <relationshipName>MigrationRowErrorsJob</relationshipName>
    <type>Lookup</type>
</CustomField>