force-app/main/default/objects/MigrationRowError__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>Denormalized from the parent batch. Allows error report filtering by object type without joining to MigrationBatch or MigrationObjectConfig.</description>
    <label>Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>