force-app/main/default/objects/MigrationRowError__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <description>PreValidation: error caught before any DML — schema check, required field, picklist, duplicate detection. DML: error returned from Database.SaveResult after the insert/upsert attempt.</description>
    <label>Phase</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>PreValidation</fullName><default>false</default><label>Pre-Validation</label></value>
            <value><fullName>DML</fullName><default>false</default><label>DML</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>