force-app/main/default/objects/MigrationRowError__c/fields/RowNumber__c.field-meta.xml
<CustomField>
    <fullName>RowNumber__c</fullName>
    <description>Absolute row number in the source dataset for this object (1-based). Maps directly to a row in the source CSV or extract. Used by the client to locate and fix the row.</description>
    <label>Row Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>