force-app/main/default/objects/MigrationRowError__c/fields/SourceExternalId__c.field-meta.xml
<CustomField>
    <fullName>SourceExternalId__c</fullName>
    <description>The value of the external ID field from the source row. Allows the client to identify the specific record in their source system without knowing the row number.</description>
    <label>Source External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>