force-app/main/default/objects/MigrationRowError__c/fields/SourceValue__c.field-meta.xml
<CustomField>
    <fullName>SourceValue__c</fullName>
    <description>The offending value from the source row, truncated to 255 characters for display. Shown alongside the SuggestedFix in the validation report.</description>
    <label>Source Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>