force-app/main/default/objects/MigrationRowError__c/fields/SuggestedFix__c.field-meta.xml
<CustomField>
    <fullName>SuggestedFix__c</fullName>
    <description>Framework-generated remediation hint. Examples: "Allowed picklist values: Active, Inactive, Pending" | "Maximum length: 80 characters. Current length: 124" | "Parent Account with Legacy ID ACC-001 not found in MigrationRecordLog"</description>
    <label>Suggested Fix</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>